--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www.js"
+    "start": "node ./bin/www.js",
+    "db:createPetsTable": "node -r dotenv/config ./db/scripts/petsTable/createPetsTable.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
